components/component-golang/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: e2e-multiple-components
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: component-golang
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elcomponent-golang
  namespace: appstudio-e2e-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-component-golang
    weight: null
status: {}
